fluxcd/apps/overlays/production/zz-graveyard/dolibarr/statefulset-mariadb-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dolibarr-mariadb
spec:
  template:
    spec:
      containers:
      - name: mariadb
        image: docker.io/linuxserver/mariadb:11.8.8
        volumeMounts:
        - $patch: delete
          name: PLACEHOLDER_MARIADB_DATA
        - name: hyrule-castle-dolibarr-mariadb-data
          mountPath: /var/lib/mysql
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "2Gi"
  volumeClaimTemplates:
  - metadata:
      name: hyrule-castle-dolibarr-mariadb-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: ceph-rbd
      resources:
        requests:
          storage: 10Gi
