fluxcd/apps/overlays/production/zz-graveyard/dolibarr/service-dolibarr-web-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: dolibarr-web
  labels:
    policy.prplanit.com/ingress: "true"
