fluxcd/apps/overlays/production/zz-graveyard/dolibarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dolibarr-web
  namespace: hyrule-castle
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Business Apps (Hyrule Castle🏰)"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: hyrule-castle
      sectionName: https-prplanit
  hostnames:
    - "dolibarr.prplanit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dolibarr-web
          port: 40118
